--- a/.github/workflows/export-commit-nyl_demo.yml
+++ b/.github/workflows/export-commit-nyl_demo.yml
@@ -151,6 +151,6 @@ jobs:
 
         solution-target-folder: ${{ github.event.inputs.solution_target_folder}}/${{ github.event.inputs.solution_name }} 
 
-        repo-token: ${{ secrets.GITHUB_TOKEN }} 
+        repo-token: ${{ secrets.TOKEN }} 
 
         allow-empty-commit: true 
