--- a/.github/workflows/release-solution-to-prod.yml
+++ b/.github/workflows/release-solution-to-prod.yml
@@ -78,7 +78,7 @@ on:
 
         required: true 
 
-        default: ${{ secrets.CLIENT_ID }} 
+        default: 4540b8f4-a51b-4897-9c5f-0aebf91559d1 
 
       TENANT_ID:  
 
@@ -88,7 +88,7 @@ on:
 
         required: true 
 
-        default: ${{ secrets.TENANT_ID }}  
+        default: 1557f771-4c8e-4dbd-8b80-dd00a88e833e 
 
  
 
