--- a/.github/workflows/release-solution-to-prod.yml
+++ b/.github/workflows/release-solution-to-prod.yml
@@ -66,7 +66,7 @@ on:
 
         required: true 
 
-        default: ‘https://org7ccd9efa.crm.dynamics.com/’ 
+        default: 'https://org7ccd9efa.crm.dynamics.com/'
 
          
 
