--- a/.github/workflows/release-solution-to-target.yml
+++ b/.github/workflows/release-solution-to-target.yml
@@ -38,12 +38,12 @@ on:
         description: 'The client id'
         type: string
         required: true
-        default: ${{ secrets.CLIENT_ID }}
+        default: '8d8ad8c9-e324-42a5-890a-3b58cecb29ea'
       TENANT_ID: 
         description: 'The tenant id'
         type: string
         required: true
-        default: ${{ secrets.TENANT_ID }} 
+        default: '1557f771-4c8e-4dbd-8b80-dd00a88e833e' 
 
 jobs:
   convert-to-managed:
