--- a/.github/workflows/release-solution-to-prod.yml
+++ b/.github/workflows/release-solution-to-prod.yml
@@ -78,7 +78,7 @@ on:
 
         required: true 
 
-        default: 4540b8f4-a51b-4897-9c5f-0aebf91559d1 
+        default: 50d17c49-a3b8-4a14-8a0a-ee9d0ea6a764 
 
       TENANT_ID:  
 
@@ -176,9 +176,13 @@ jobs:
 
         path: ${{ inputs.solution_release_folder}} 
 
+    
+    - name: Actions Install
+      uses: microsoft/powerplatform-actions/actions-install@v1
+      
     - name: Import solution to prod env 
 
-      uses: microsoft/powerplatform-actions/import-solution@v0 
+      uses: microsoft/powerplatform-actions/import-solution@v1 
 
       with: 
 
