--- a/.github/workflows/release-solution-to-target.yml
+++ b/.github/workflows/release-solution-to-target.yml
@@ -85,6 +85,9 @@ jobs:
       with:
         lfs: true
 
+    - name: actions install
+      uses: microsoft/powerplatform-actions/actions-install@v1
+    
     - name: Fetch the ready to ship solution from GH artifact store
       uses: actions/download-artifact@v4
       with:
