--- a/.github/workflows/release-solution-to-prod.yml
+++ b/.github/workflows/release-solution-to-prod.yml
@@ -180,6 +180,9 @@ jobs:
 
    
      
+    - name: Actions Install
+      uses: microsoft/powerplatform-actions/actions-install@v1
+      
     - name: Import solution to prod env 
 
       uses: microsoft/powerplatform-actions/import-solution@v1 
