--- a/.github/workflows/release-solution-to-target.yml
+++ b/.github/workflows/release-solution-to-target.yml
@@ -91,5 +91,6 @@ jobs:
         client-secret: ${{ secrets.PowerPlatformSPN }}
         tenant-id: ${{env.TENANT_ID}}
         solution-file: ${{ inputs.solution_release_folder}}/${{ inputs.solution_name }}_managed.zip
+        deployment-settings-file: deploymentsettings.json
         force-overwrite: true
         publish-changes: true
