--- a/.github/workflows/release-solution-to-target.yml
+++ b/.github/workflows/release-solution-to-target.yml
@@ -93,6 +93,7 @@ jobs:
         client-secret: ${{ secrets.PowerPlatformSPN }}
         tenant-id: ${{env.TENANT_ID}}
         solution-file: ${{ inputs.solution_release_folder}}/${{ inputs.solution_name }}_managed.zip
-        deployment-settings-file: ${{ inputs.solution_outbound_folder }}/deploymentsettings.json
+        deployment-settings: true
+        deployment-settings-file: ${{ inputs.solution_release_folder }}/deploymentsettings.json
         force-overwrite: true
         publish-changes: true
